--- a/app/app.component.css
+++ b/app/app.component.css
@@ -8,7 +8,7 @@ h1 {
   font-size: 3rem;
 }
 
-.list {
+.list-members {
   padding: 1rem;
   width: 100%;
   height: 10rem;
@@ -56,11 +56,15 @@ h1 {
   width: 100%;
 }
 
+.generate-button {
+  cursor: pointer;
+}
+
 .error-msg {
   color: red;
 }
 
-li {
+.list-members li {
   list-style: none;
   margin-bottom: 0.5rem;
   font-size: 1.25rem;
